--- a/anime-detail.html
+++ b/anime-detail.html
@@ -225,6 +225,7 @@
   <audio id="hazbin-ost" loop><source src="https://www.dropbox.com/scl/fi/04uebc7tvm3l3zejmt9jo/m1.mp3?rlkey=9yq3w6i0hqp5qbc2ujs28ab9p&st=2wugb0mz&raw=1" type="audio/mpeg"></audio>
   <audio id="shadow1-ost" loop><source src="https://www.dropbox.com/scl/fi/bab2zrahhc8lqrvf0xz4m/The-Eminence-in-Shadow-Season-2-OP-Full-grayscale-dominator-Sub-Espa-ol-Romaji-AMV.mp3?rlkey=g0kdyoiamb5aric7kzrufetuk&st=bofhh779&raw=1" type="audio/mpeg"></audio>
   <audio id="shadow2-ost" loop><source src="https://www.dropbox.com/scl/fi/wlfy3btt81oioawt6x3qo/The-Eminence-in-Shadow-Moonlight-Sonata-1st-Movement-Beethoven.mp3?rlkey=vcrmpxnlqnjjk6bt2nnqfpfif&st=u9m1yzem&raw=1" type="audio/mpeg"></audio>
+  <audio id="spy-ost" loop><source src="https://www.dropbox.com/scl/fi/kuqz0dl06vn8j4fnlb5hm/Spy-x-Family-Ed.-2-Full-Shikisai-by-yama-Sub-Espa-ol.mp3?rlkey=s4yvn7z2543mwco8w24eiuia3&st=n7grw5v2&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2732,7 +2733,81 @@
           }
         ]
       },
-
+      49: {
+        title: "Spy × Family",
+        desc: "Todo el mundo tiene una parte de sí mismos que no puede mostrar a los demás. En una era en la que las naciones de todo el mundo se encuentran involucradas en una feroz guerra de información a puerta cerrada, Ostania y Westalis llevan décadas en guerra fría. La División de Inteligencia de Westalis (WISE) envía a su mejor espía, “Twilight”, en una misión ultrasecreta para vigilar los movimientos de Donovan Desmond, quien dirige el Partido Nacional por la Unidad de Ostania, responsable de bombardear los esfuerzos de paz entre ambos países.",
+        cover: "spy.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/47fpy586gvqdv5uz2w6w8/0623385.jpg?rlkey=eto92eui4oe0u8qtn0dm4nhsm&st=yyzrugde&raw=1",
+            eps: [
+              { title: "Spy × Family T1 Cap 1"},
+              { title: "Spy × Family T1 Cap 2"},
+              { title: "Spy × Family T1 Cap 3"},
+              { title: "Spy × Family T1 Cap 4"},
+              { title: "Spy × Family T1 Cap 5"},
+              { title: "Spy × Family T1 Cap 6"},
+              { title: "Spy × Family T1 Cap 7"},
+              { title: "Spy × Family T1 Cap 8"},
+              { title: "Spy × Family T1 Cap 9"},
+              { title: "Spy × Family T1 Cap 10"},
+              { title: "Spy × Family T1 Cap 11"},
+              { title: "Spy × Family T1 Cap 12"},
+              { title: "Spy × Family T1 Cap 13"},
+              { title: "Spy × Family T1 Cap 14"},
+              { title: "Spy × Family T1 Cap 15"},
+              { title: "Spy × Family T1 Cap 16"},
+              { title: "Spy × Family T1 Cap 17"},
+              { title: "Spy × Family T1 Cap 18"},
+              { title: "Spy × Family T1 Cap 19"},
+              { title: "Spy × Family T1 Cap 20"},
+              { title: "Spy × Family T1 Cap 21"},
+              { title: "Spy × Family T1 Cap 22"},
+              { title: "Spy × Family T1 Cap 23"},
+              { title: "Spy × Family T1 Cap 24"},
+              { title: "Spy × Family T1 Cap 25"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/da304j8cu2p1m8aorjtm8/ddfgfdgdfgdfg.jpg?rlkey=9ocn8z1kxwqm0w1jegyawm4v2&st=8huenzv4&raw=1",
+            eps: [
+              { title: "Spy × Family T2 Cap 1"},
+              { title: "Spy × Family T2 Cap 2"},
+              { title: "Spy × Family T2 Cap 3"},
+              { title: "Spy × Family T2 Cap 4"},
+              { title: "Spy × Family T2 Cap 5"},
+              { title: "Spy × Family T2 Cap 6"},
+              { title: "Spy × Family T2 Cap 7"},
+              { title: "Spy × Family T2 Cap 8"},
+              { title: "Spy × Family T2 Cap 9"},
+              { title: "Spy × Family T2 Cap 10"},
+              { title: "Spy × Family T2 Cap 11"},
+              { title: "Spy × Family T2 Cap 12"},
+            ]
+          },
+          {
+            num: 3,
+            cover: "https://www.dropbox.com/scl/fi/mtki74k5zzzywfdegb4ir/dfffffg.jpg?rlkey=g563wasphqjhhyep83qnq548r&st=9uw7j6kq&raw=1",
+            eps: [
+              { title: "Spy × Family T3 Cap 1"},
+              { title: "Spy × Family T3 Cap 2"},
+              { title: "Spy × Family T3 Cap 3"},
+              { title: "Spy × Family T3 Cap 4"},
+              { title: "Spy × Family T3 Cap 5"},
+              { title: "Spy × Family T3 Cap 6"},
+              { title: "Spy × Family T3 Cap 7"},
+              { title: "Spy × Family T3 Cap 8"},
+              { title: "Spy × Family T3 Cap 9"},
+              { title: "Spy × Family T3 Cap 10"},
+              { title: "Spy × Family T3 Cap 11"},
+              { title: "Spy × Family T3 Cap 12"},
+              { title: "Spy × Family T3 Cap 13"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -2926,6 +3001,7 @@
         46: ['muneca-ost'],
         47: ['hazbin-ost'],
         48: ['shadow1-ost','shadow2-ost'],
+        49: ['spy-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
