--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@ header h1 {
       <option>Divulgación Científica</option>
       <option>Drama</option>
       <option>Ecchi</option>
+      <option>Espionaje</option>
       <option>Escolar</option>
       <option>Fantasía</option>
       <option>Fantasía oscura</option>
@@ -711,6 +712,7 @@ header h1 {
       {id:46, title:"My Dress-Up Darling", aliases: ["Sono Bisque Doll wa Koi wo Suru"], img:"muneca.jpg", rating:4.9, genres:["Comedia","Romance","Slice of Life","Escolar","Cosplay","Seinen"]},
       {id:47, title:"Hazbin Hotel", aliases: ["Hotel Hazbin"], img:"hhzz.jpg", rating:4.8, genres:["Comedia","Musical","Drama","Animación","Policial","Seijin"]},
       {id:48, title:"The Eminence in Shadow", aliases: ["Kage no Jitsuryokusha ni Naritakute!"], img:"shadow.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Isekai","Harem","Steampunk","Shōnen"]},
+      {id:49, title:"Spy × Family", img:"spy.jpg", rating:4.9, genres:["Comedia","Drama","Fantasía","Familiar","Espionaje","Shōnen"]},
 
     ];
 
