--- a/video-player.html
+++ b/video-player.html
@@ -1846,6 +1846,55 @@
           "12": { link:'https://www.dropbox.com/scl/fi/z72p70rwmz0lwr2r5d4rb/The-Eminence-in-Shadow-T2-Cap-12-Castellano.mp4?rlkey=9tunwskw7fr9gswgtac54cy6w&st=knzq542f&raw=1', link2: 'https://drive.google.com/file/d/1yH17f_NRUnrmUa84mRLVcFmSfDPKGnSw/preview', title:'The Eminence in Shadow T2 Cap 12' },
         }
       },
+      "49": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/sywctf733ozhbs03upz3y/Spy-Family-T1-Cap-1.mp4?rlkey=51fngh3e04lfdhiee43nuns9e&st=421gvhfa&raw=1', link2: 'https://drive.google.com/file/d/1TGPLB-hk_GRolc7A_qAcWfmb918xWE4D/preview', title:'Spy × Family T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/kykdhlq3utt03uqf36cj3/Spy-Family-T1-Cap-2.mp4?rlkey=uu80pkhia71ae2guypaogfw7u&st=6woqa7wh&raw=1', link2: 'https://drive.google.com/file/d/1TmWjVJDN6o0xL1_xJ68XnLTkGIgxvHRW/preview', title:'Spy × Family T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/f9cb6qcgijb5ck80ch444/Spy-Family-T1-Cap-3.mp4?rlkey=wy2ifu5a9w7dakkxcctsc44be&st=s8eu112s&raw=1', link2: 'https://drive.google.com/file/d/14cSDSwLXKQUHFefuWZ1MQoQjrdWz5JNP/preview', title:'Spy × Family T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/btvs5bc7vda87qqvofhxz/Spy-Family-T1-Cap-4.mp4?rlkey=m8rxacwtleztku7mdb60ifsum&st=49z2ea31&raw=1', link2: 'https://drive.google.com/file/d/1zdGGJ1fN3LGMOXiFiDE-2WjD3iJqg-_4/preview', title:'Spy × Family T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/zmv837w1z7e5f9zybzxjc/Spy-Family-T1-Cap-5.mp4?rlkey=tvd675wecry9dlja40q7fvp9p&st=bz7al1ps&raw=1', link2: 'https://drive.google.com/file/d/1BVk38L0BUl6CTFP5iA3QiDHm6AJppi0s/preview', title:'Spy × Family T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/47i3glb8n09wburr6amqu/Spy-Family-T1-Cap-6.mp4?rlkey=jo0pvgcj4rbeouo1vfkyz7zcb&st=8z5q6b6d&raw=1', link2: 'https://drive.google.com/file/d/1-_JkyUIw3oqBSdt3oT4ZHZfoCe1rOgQJ/preview', title:'Spy × Family T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/h87d9t8jcn9qrjoqjrcv7/Spy-Family-T1-Cap-7.mp4?rlkey=lbfiqpuv60r0b4lz4zysz48hv&st=1y1q1s4m&raw=1', link2: 'https://drive.google.com/file/d/1_wdh2EoCVNI04gdN_lJTlf8-UphNjY1j/preview', title:'Spy × Family T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/y2kjpy9juso6yt1a3xn65/Spy-Family-T1-Cap-8.mp4?rlkey=0mah6s9s1hhj19gp9616otpyn&st=bovai154&raw=1', link2: 'https://drive.google.com/file/d/1rgLNXs4c2l4llaPv1CPf3zxWeG8g-Doh/preview', title:'Spy × Family T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/jayx1iz860oger79lpncr/Spy-Family-T1-Cap-9.mp4?rlkey=228nlmm9tbzt9jl8hoq3k5ga0&st=wdcwvzjf&raw=1', link2: 'https://drive.google.com/file/d/1OyMEszU5w41JzgzbZasEsOEmHiU8vcgS/preview', title:'Spy × Family T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/go8eyacy0j3yfuyrxgaip/Spy-Family-T1-Cap-10.mp4?rlkey=w1hltcwt0i6qod6i0laa8pl8r&st=cf0drgaf&raw=1', link2: 'https://drive.google.com/file/d/1qZqB5eXmBOW-59iOhhUBCQkGOj0A6Y17/preview', title:'Spy × Family T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/1h4k7z6ark6g6trq8irn9/Spy-Family-T1-Cap-11.mp4?rlkey=dc0ogh1b6qp3dn83zyfat6q38&st=iqypt5g9&raw=1', link2: 'https://drive.google.com/file/d/117HmaYw679dyMVhvhxexWSPxG-rQou2q/preview', title:'Spy × Family T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/3c3h85ma6w5ym3ykpn637/Spy-Family-T1-Cap-12.mp4?rlkey=8bdiob2gflrx3swfmm6qmmgh3&st=oia584at&raw=1', link2: 'https://drive.google.com/file/d/1sFyvGi8pqAfNmd8mjftj0kqwQphET0q8/preview', title:'Spy × Family T1 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/fkfzvy0scmi56hocsu4vp/Spy-Family-T1-Cap-13.mp4?rlkey=51868w038mx5ss49d88vzbo9n&st=qa6lqj3s&raw=1', link2: 'https://drive.google.com/file/d/1fbosogfA0voTC4ov0n_rlWaWmncFNCLL/preview', title:'Spy × Family T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/fmvahsgd8qecvuoffttwc/Spy-Family-T1-Cap-14.mp4?rlkey=ypizm2qqpxso06aybtdwnepus&st=3a89fadg&raw=1', link2: 'https://drive.google.com/file/d/1bPmZ4oCNXidOaS4zmB90nCGFGq6q7XKM/preview', title:'Spy × Family T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/uorquvnsdrvv4a7stiicu/Spy-Family-T1-Cap-15.mp4?rlkey=oasjqrddlg97s9acuz73mqr2y&st=qu1v9k7v&raw=1', link2: 'https://drive.google.com/file/d/1URQVPlmw63jSpTyND3RLSWZH9AYrRVgZ/preview', title:'Spy × Family T1 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/d6ujjy8m6zlcu3yzn480y/Spy-Family-T1-Cap-16.mp4?rlkey=bu0xuy52ep20nf3w8hopxc7b8&st=0sky0fnc&raw=1', link2: 'https://drive.google.com/file/d/1GTghW7d8gWZoK0Io9KIIrAdRAtjS3OF5/preview', title:'Spy × Family T1 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/123avjd5gbc5rfhbdu12k/Spy-Family-T1-Cap-17.mp4?rlkey=c94773bcvheuj0px6rkje8gow&st=2q1k0c8z&raw=1', link2: 'https://drive.google.com/file/d/1EMYiIFvYlweTxAmn31hxCtN4TVDOyss5/preview', title:'Spy × Family T1 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/qaj4ea53a0q84rvpf5dik/Spy-Family-T1-Cap-18.mp4?rlkey=b25i9p256sm7bvwbbsgbzior1&st=009qsdzz&raw=1', link2: 'https://drive.google.com/file/d/1pXDAi_dj4zUzSrgsv5K9l0MATGOaLASW/preview', title:'Spy × Family T1 Cap 18' },
+          "19": { link:'https://www.dropbox.com/scl/fi/x53r2sbkjhad0db4osvcw/Spy-Family-T1-Cap-19.mp4?rlkey=2jpl2yy8vz9ed20zomsvhpzfw&st=31gmd1mz&raw=1', link2: 'https://drive.google.com/file/d/1HiZ1gVN8mGJSYRc0HTu1fuI_nOxCbQhQ/preview', title:'Spy × Family T1 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/0vjyfuks9eejpcjvhgpbk/Spy-Family-T1-Cap-20.mp4?rlkey=008j6eiuffm8j71s4d3jz8z7e&st=bwwi3xwq&raw=1', link2: 'https://drive.google.com/file/d/1eYNR6AsFr3pJpgJfnSEDKDns0Ua41qNz/preview', title:'Spy × Family T1 Cap 20' },
+          "21": { link:'https://www.dropbox.com/scl/fi/3m9kkrsg1meo8qmkxb0fn/Spy-Family-T1-Cap-21.mp4?rlkey=afw8l9dfc2cc8u6b83y1bh8pf&st=rj23even&raw=1', link2: 'https://drive.google.com/file/d/1bJiW1KaM2WYELbjpM_3Cr0V-WDvQuuX8/preview', title:'Spy × Family T1 Cap 21' },
+          "22": { link:'https://www.dropbox.com/scl/fi/zmqtgb76z8t74dbwmy3pp/Spy-Family-T1-Cap-22.mp4?rlkey=atr3pwe9k8osbe1sex4uhceuz&st=j6qrgx1k&raw=1', link2: 'https://drive.google.com/file/d/1virPj1gV5fZnLHMg9FyBNioLPNDXvJA5/preview', title:'Spy × Family T1 Cap 22' },
+          "23": { link:'https://www.dropbox.com/scl/fi/nkjbwhy31vqkvw69bsvzo/Spy-Family-T1-Cap-23.mp4?rlkey=j370euu0ccy2d8bl6vf7l0gsc&st=5ptvdj2s&raw=1', link2: 'https://drive.google.com/file/d/1xAP5V1QwNbtTM5awUQ6UMAfqFrmDR2qe/preview', title:'Spy × Family T1 Cap 23' },
+          "24": { link:'https://www.dropbox.com/scl/fi/mm02ss2nsm9zj3zoeefam/Spy-Family-T1-Cap-24.mp4?rlkey=dt4lzcvkkzh4ujfkoindc899j&st=km4m69xl&raw=1', link2: 'https://drive.google.com/file/d/10M4qFlBjDZ9iLM8wEjB8OObNkC6EngRb/preview', title:'Spy × Family T1 Cap 24' },
+          "25": { link:'https://www.dropbox.com/scl/fi/xvfl9yexs0moc96gk4mhc/Spy-Family-T1-Cap-25.mp4?rlkey=17o40i9pbvvr6vkswsrvuo6t1&st=zm2stdt8&raw=1', link2: 'https://drive.google.com/file/d/1drdvuWZ0JXSObH_t4GbLRp7cB4oGA1dj/preview', title:'Spy × Family T1 Cap 25' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/njfeuaeryu15a9u6m9f4e/Spy-Family-T2-Cap-1.mp4?rlkey=8ehlkwg63k9e1yn6ok2n3tb5u&st=eler82io&raw=1', link2: 'https://drive.google.com/file/d/146-dbmeO7P8f0rF_ci5-oiI9aoLEom3S/preview', title:'Spy × Family T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/h8nex5otbcekmkv34apzq/Spy-Family-T2-Cap-2.mp4?rlkey=42yl8st5sn9jm05utpythoav9&st=xbnr52se&raw=1', link2: 'https://drive.google.com/file/d/1aACIocf_niFEtpOu4U1l7NY5CkYsCAlz/preview', title:'Spy × Family T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/50h512tefujbf980y0xh9/Spy-Family-T2-Cap-3.mp4?rlkey=fxddm3bzfl1czfkkld63uvxip&st=czx576hi&raw=1', link2: 'https://drive.google.com/file/d/1ZnzJm0vClbhqALqnh7cwklphr8W09Qy0/preview', title:'Spy × Family T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/0kn80quonram2liju84zj/Spy-Family-T2-Cap-4.mp4?rlkey=wvj5f2litgwtpjhd2qo78ir2z&st=h0q362jp&raw=1', link2: 'https://drive.google.com/file/d/1u2Wi4RA8dZkyIv7PMFsRCJOYxpwWWnXs/preview', title:'Spy × Family T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/bab96bat8da6jxz0npiba/Spy-Family-T2-Cap-5.mp4?rlkey=xzt8jqoo3p2dzugc4z4pol151&st=ijvwn91f&raw=1', link2: 'https://drive.google.com/file/d/1x2cU8M2IE5vO0QM20eT6jjzooVLK740N/preview', title:'Spy × Family T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/hepjxota28xymxa00g7ce/Spy-Family-T2-Cap-6.mp4?rlkey=2xe77wgtxojkeo9k9pm3khp38&st=6fzyfcw6&raw=1', link2: 'https://drive.google.com/file/d/1nfCI7T31_3FaR1InYQoziMKp8APSlu-w/preview', title:'Spy × Family T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/le666ix9jwwj6nbxbsau0/Spy-Family-T2-Cap-7.mp4?rlkey=mq1mp04ha036ntvc5dfwogrb0&st=5xar9f9y&raw=1', link2: 'https://drive.google.com/file/d/11cOvRFJ_2Mo2Oq4uyXbCIlAVx03fB9i0/preview', title:'Spy × Family T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/2zu3omqm38iq4wfensdst/Spy-Family-T2-Cap-8.mp4?rlkey=5wbwtlkcpg6rheknuqcbe1ei3&st=o3p1hqzu&raw=1', link2: 'https://drive.google.com/file/d/1ARk-lqOaNIMOsyVY-KwekpwK6nyXeBjh/preview', title:'Spy × Family T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/o3dqruvd26pa4l6fzc6me/Spy-Family-T2-Cap-9.mp4?rlkey=tbekogoff23bhkfcwhkvunyaz&st=zxeg7gxn&raw=1', link2: 'https://drive.google.com/file/d/1g-EBPCdWLl5PZlrU3ZR84_EOgjS8RFdM/preview', title:'Spy × Family T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/n2x52t5j7w987jpaunrlg/Spy-Family-T2-Cap-10.mp4?rlkey=oetah7lf5vq5fn528qow2k1zd&st=wx7pn6j1&raw=1', link2: 'https://drive.google.com/file/d/1BnfFRRpeDutDHkFiX4k0HdwmZnmCh7ad/preview', title:'Spy × Family T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/e1a2rz764ldq7oeujsb61/Spy-Family-T2-Cap-11.mp4?rlkey=b81hpv9ca2hz8lh9v1h31bkqy&st=plaxz5g7&raw=1', link2: 'https://drive.google.com/file/d/1IYeAr8PFgBq_yuZg4Fjp37yeod9mncIf/preview', title:'Spy × Family T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/lgcv6ejtra3kzfbzza5j6/Spy-Family-T2-Cap-12.mp4?rlkey=ey6ckbsx5u3z6ej0j9swa6zvv&st=imdcuspv&raw=1', link2: 'https://drive.google.com/file/d/19FHp7W5DYTROeokW_G2d3s6DK4wSKvd2/preview', title:'Spy × Family T2 Cap 12' },
+        },
+        "3": {
+          "1": { link:'https://www.dropbox.com/scl/fi/5lrn9vci8uartilnyx1uy/Spy-Family-T3-Cap-1.mp4?rlkey=tk1rfcehc1zxl5cg9egps1wij&st=h7fax0hp&raw=1', link2: 'https://drive.google.com/file/d/1MdTaQKCtmuyirNYx_5WXJHKGw9FKgTXK/preview', title:'Spy × Family T3 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/5i7p21ni7u1b0ci58lknt/Spy-Family-T3-Cap-2.mp4?rlkey=rmp72zlu9gjgygtrqcazmtvii&st=8zs1qtyj&raw=1', link2: 'https://drive.google.com/file/d/1nMBZYAKch3txGYa7ZR-E9PXH3HJGV7Qe/preview', title:'Spy × Family T3 Cap 2' },
+        }
+      },
+
+
 
 
     };
@@ -2120,7 +2169,7 @@
       episode = (DB[anime] && DB[anime][s] && DB[anime][s][e]) || null;
       if (!episode) {
         titleEl.textContent = 'Episodio no encontrado';
-        showToast('Episodio no encontrado en la base de datos');
+        showToast('Próximamente');
         return;
       }
       epTitle = episode.title || `Anime ${anime} - S${s}E${e}`;
