--- a/video-player.html
+++ b/video-player.html
@@ -2082,7 +2082,48 @@
           "1": { link:'https://www.dropbox.com/scl/fi/sr54vz6tfaj7oqum850da/My-Hero-Academia-T8-Cap-1.mp4?rlkey=pzm4ztsdrcsj8kesrox9zlugi&st=oq2p9m3y&raw=1', link2: 'https://drive.google.com/file/d/1C16zoogP1JPPZANScxJP0z67WTxZYgIq/preview', title:'My Hero Academia T8 Cap 1' },
         }
       },
-
+      "52": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/yhl409p1qxe3d4j8wjx90/Kakkou-no-Linazuke-T1-Cap-1.mp4?rlkey=ihdu6k1w16kryb96gik6s2w66&st=p3z5s7dq&raw=1', title:'Kakkou no Linazuke T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/1x5ufsnvpv88v8app9jw9/Kakkou-no-Linazuke-T1-Cap-2.mp4?rlkey=m8ozylhq7fhg54meb1udtlonp&st=saq2vs8g&raw=1', title:'Kakkou no Linazuke T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/d66pj3m9obwycslxlrtpm/Kakkou-no-Linazuke-T1-Cap-3.mp4?rlkey=39c33p46c3tj4r21e3xj7qrlp&st=n31wx9to&raw=1', title:'Kakkou no Linazuke T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/zlkz7yz8tda5me360gs3e/Kakkou-no-Linazuke-T1-Cap-4.mp4?rlkey=mmm6usj76pu0npcy0hxtsh26p&st=t8c3kaie&raw=1', title:'Kakkou no Linazuke T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/j9ztccpv097o3j3j69sk7/Kakkou-no-Linazuke-T1-Cap-5.mp4?rlkey=eppbswos0rwp09h2cl17fajlc&st=yny2ykpn&raw=1', title:'Kakkou no Linazuke T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/1mdhhc138z25rx2apusjb/Kakkou-no-Linazuke-T1-Cap-6.mp4?rlkey=rl01ypv7atxye9t4zgrnkpjnk&st=cdodi6ot&raw=1', title:'Kakkou no Linazuke T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/gkgv6skmojiucmkqsgluv/Kakkou-no-Linazuke-T1-Cap-7.mp4?rlkey=0ors1t81kmm1qem6toyvsqly7&st=ho8s11ko&raw=1', title:'Kakkou no Linazuke T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/zzx4r3vj16hu0wii06xt9/Kakkou-no-Linazuke-T1-Cap-8.mp4?rlkey=0qlxlqr9nap56tt70i6stbeuy&st=f9zh6lx0&raw=1', title:'Kakkou no Linazuke T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/68ue55wno9q6tcy5zxaf8/Kakkou-no-Linazuke-T1-Cap-9.mp4?rlkey=ylgtiybfdn2rwucvvo4v233b7&st=rwgea0fk&raw=1', title:'Kakkou no Linazuke T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/x20cgyfksk5vjqwgtblln/Kakkou-no-Linazuke-T1-Cap-10.mp4?rlkey=w8styxlfbq2mbgqv8xq2dcy3x&st=gvps2x5y&raw=1', title:'Kakkou no Linazuke T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/5anvfz57a99uq0ri1amqg/Kakkou-no-Linazuke-T1-Cap-11.mp4?rlkey=v5s99hpy0edw23txkra4ckn4l&st=w9kkzege&raw=1', title:'Kakkou no Linazuke T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/54hnmwmme30wmzwzshu2t/Kakkou-no-Linazuke-T1-Cap-12.mp4?rlkey=hg57f3d07d3zqn4wahs3v0gj1&st=t0tw02kl&raw=1', title:'Kakkou no Linazuke T1 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/af0p38a6vm76e9phvxx6d/Kakkou-no-Linazuke-T1-Cap-13.mp4?rlkey=4w830jxr28kl8wf5w866bsbi2&st=pmnhx72b&raw=1', title:'Kakkou no Linazuke T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/59syq4cl2vpfrscmjn38j/Kakkou-no-Linazuke-T1-Cap-14.mp4?rlkey=ihqw2jmekykj3l2t8o9bv1i2o&st=brogk2te&raw=1', title:'Kakkou no Linazuke T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/2xnqpdqqh9nx2qaoi89h1/Kakkou-no-Linazuke-T1-Cap-15.mp4?rlkey=vqpmx8afbmu90tvkkcmlqczuk&st=24ieogix&raw=1', title:'Kakkou no Linazuke T1 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/4awgk3z34cv8d5y8ml5lr/Kakkou-no-Linazuke-T1-Cap-16.mp4?rlkey=gqnujlyk77ls0hrz06378hwk9&st=j1q350hv&raw=1', title:'Kakkou no Linazuke T1 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/atm8rqssifjtmgksezzi0/Kakkou-no-Linazuke-T1-Cap-17.mp4?rlkey=ayd55dy72613r1ws1h6u4xhyw&st=09wr8x6z&raw=1', title:'Kakkou no Linazuke T1 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/a73jjo3o2vgb5zvub4cjb/Kakkou-no-Linazuke-T1-Cap-18.mp4?rlkey=s1n67gacvo0gihh5idmcsvcvx&st=h683tjdl&raw=1', title:'Kakkou no Linazuke T1 Cap 18' },
+          "19": { link:'https://www.dropbox.com/scl/fi/3qo227w6jawza5tqdzi6t/Kakkou-no-Linazuke-T1-Cap-19.mp4?rlkey=59onygvexqdylscc4yfdvrnrq&st=d05k0bh5&raw=1', title:'Kakkou no Linazuke T1 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/8h8lrl62vjeh2fb4g6qr3/Kakkou-no-Linazuke-T1-Cap-20.mp4?rlkey=4kyehxra97joxw03yspdbq56s&st=b11tuqps&raw=1', title:'Kakkou no Linazuke T1 Cap 20' },
+          "21": { link:'https://www.dropbox.com/scl/fi/esg46hlhuz5pg86rmut66/Kakkou-no-Linazuke-T1-Cap-21.mp4?rlkey=jxrskmres376ganj8oojnllj4&st=pi8y68lv&raw=1', title:'Kakkou no Linazuke T1 Cap 21' },
+          "22": { link:'https://www.dropbox.com/scl/fi/v5kl70yit5nk5a1mtks9s/Kakkou-no-Linazuke-T1-Cap-22.mp4?rlkey=bz762twbofhryw3yp0wwaf5v4&st=pczqquat&raw=1', title:'Kakkou no Linazuke T1 Cap 22' },
+          "23": { link:'https://www.dropbox.com/scl/fi/76wz6g5n4utju858wrhf7/Kakkou-no-Linazuke-T1-Cap-23.mp4?rlkey=yc47c3vipszomd3clqxg7ps9r&st=texxr6nx&raw=1', title:'Kakkou no Linazuke T1 Cap 23' },
+          "24": { link:'https://www.dropbox.com/scl/fi/sy19rudknd5ofkmp26qsm/Kakkou-no-Linazuke-T1-Cap-24.mp4?rlkey=up2vx8pvxeurptuakwxue6leq&st=qrrf9do9&raw=1', title:'Kakkou no Linazuke T1 Cap 24' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/w8yn0ywo7fhg0f3deooqk/Mashle-T1-Cap-1.mp4?rlkey=hgh0sox2rx15sz9zj83rhfixc&st=j10kwn2m&raw=1', title:'Kakkou no Linazuke T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/hbpyox81zvkb13kd6bvep/Mashle-T1-Cap-2.mp4?rlkey=nyxxw4nun3bw00mw1pzyyaav0&st=sqjpacw1&raw=1', title:'Kakkou no Linazuke T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/m4eo6fs2bbvs6s79ht409/Mashle-T1-Cap-3.mp4?rlkey=hojm8u2xschqcqwhj77hjlktv&st=2fvfc3ed&raw=1', title:'Kakkou no Linazuke T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/yge1ukxvpiv27vmiyc22e/Mashle-T1-Cap-4.mp4?rlkey=av65jai6t6ngzcoyifjfo9bxb&st=slzbkhi0&raw=1', title:'Kakkou no Linazuke T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/ulu8muemv133t7x7x3nmt/Mashle-T1-Cap-5.mp4?rlkey=17oeuuepux2tb3d5avs8fkuju&st=xo8h622r&raw=1', title:'Kakkou no Linazuke T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/b9kddw6wq6i2rsxlmfsol/Mashle-T1-Cap-6.mp4?rlkey=0hf1y87dhpo9q98blkgily4xr&st=851yd63t&raw=1', title:'Kakkou no Linazuke T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/7zhp45oyath451zw94wux/Mashle-T1-Cap-7.mp4?rlkey=r2dw30oybjawn4g2q6n6vs07e&st=gdief1ai&raw=1', title:'Kakkou no Linazuke T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/veb9n5fu8al20s4e5rrd7/Mashle-T1-Cap-8.mp4?rlkey=o43xvh0q27i17c8l3rd3itj7u&st=56oo8q8n&raw=1', title:'Kakkou no Linazuke T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/1rdlsjafuj1rt16nal8w2/Mashle-T1-Cap-9.mp4?rlkey=bdvo5jpgoba1wp1pqmyqptgos&st=pu4m7eb9&raw=1', title:'Kakkou no Linazuke T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/umvuizxggwghl4soc81y9/Mashle-T1-Cap-10.mp4?rlkey=7wr34zbjfmmv68q650kiw1axi&st=zprq11z3&raw=1', title:'Kakkou no Linazuke T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/ov3vcq0ncol2tck0zoaht/Mashle-T1-Cap-11.mp4?rlkey=urys9tszm0y0y0j9eys74kmrl&st=kh920j52&raw=1', title:'Kakkou no Linazuke T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/gxfx58uxi4d63cpx3uvcc/Mashle-T1-Cap-12.mp4?rlkey=gjtvqxxs4xarcfabx1pjapkob&st=rcgy1wk9&raw=1', title:'Kakkou no Linazuke T2 Cap 12' },
+        }
+      },
 
 
 
