--- a/anime-detail.html
+++ b/anime-detail.html
@@ -228,6 +228,7 @@
   <audio id="spy-ost" loop><source src="https://www.dropbox.com/scl/fi/kuqz0dl06vn8j4fnlb5hm/Spy-x-Family-Ed.-2-Full-Shikisai-by-yama-Sub-Espa-ol.mp3?rlkey=s4yvn7z2543mwco8w24eiuia3&st=n7grw5v2&raw=1" type="audio/mpeg"></audio>
   <audio id="blackcover-ost" loop><source src="https://www.dropbox.com/scl/fi/6ms1xqryt0pscbkcwj14v/Black-Clover-OP-10-Full-Vickeblanka-Black-Catcher-Sub-Espa-ol-HD.mp3?rlkey=l04rc2y2jr64fdy1p6oyw8dn1&st=4k97mqqr&raw=1" type="audio/mpeg"></audio>
   <audio id="myhero-ost" loop><source src="https://www.dropbox.com/scl/fi/vrw6vkic5x9tuyt1mn5ij/Boku-no-Hero-Academia-Season-1-Ending-1-full-Brian-the-Sun-Heroes-Sub-Espa-olJapon-s-AMV.mp3?rlkey=51q6lbh9hdxuni9tnyui0qkml&st=b4ayqrnh&raw=1" type="audio/mpeg"></audio>
+  <audio id="kakkou-ost" loop><source src="https://www.dropbox.com/scl/fi/znlethjlxoojg42ztq9n4/Kakou-no-iinazuke-OP-FULL-Kiyoe-Yoshioka-Dekoboko-Sub-Espa-ol-Romaji-English-AMV.mp3?rlkey=t3he35wwxyanqm1uddod743a9&st=595b7kzz&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3046,7 +3047,60 @@
           }
         ]
       },
-
+      52: {
+        title: "Kakkou no Linazuke",
+        desc: "Nagi Umino es un estudiante de preparatoria al que intercambiaron con el hijo de otra familia cuando nació, pero ahora por fin va a conocer a sus padres biológicos. El día que va a concerlos se encuentra con Erika Amano, estudiante en una preparatoria femenina para señoritas de buena familia. A petición de la chica, Nagi se ve medio forzado a fingir ser su novio para evitar un matrimonio concertado... Sin embargo, lo que no sabían es que además de ser falsos prometidos, ¡son los bebés a los que intercambiaron al nacer!",
+        cover: "pordf.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/ypmn2br72oz7vlho68bst/dfgdfgdfggg.jpg?rlkey=0ynfd69wl61vfyby3adhnnznu&st=r3ez8jha&raw=1",
+            eps: [
+              { title: "Kakkou no Linazuke T1 Cap 1"},
+              { title: "Kakkou no Linazuke T1 Cap 2"},
+              { title: "Kakkou no Linazuke T1 Cap 3"},
+              { title: "Kakkou no Linazuke T1 Cap 4"},
+              { title: "Kakkou no Linazuke T1 Cap 5"},
+              { title: "Kakkou no Linazuke T1 Cap 6"},
+              { title: "Kakkou no Linazuke T1 Cap 7"},
+              { title: "Kakkou no Linazuke T1 Cap 8"},
+              { title: "Kakkou no Linazuke T1 Cap 9"},
+              { title: "Kakkou no Linazuke T1 Cap 10"},
+              { title: "Kakkou no Linazuke T1 Cap 11"},
+              { title: "Kakkou no Linazuke T1 Cap 12"},
+              { title: "Kakkou no Linazuke T1 Cap 13"},
+              { title: "Kakkou no Linazuke T1 Cap 14"},
+              { title: "Kakkou no Linazuke T1 Cap 16"},
+              { title: "Kakkou no Linazuke T1 Cap 17"},
+              { title: "Kakkou no Linazuke T1 Cap 18"},
+              { title: "Kakkou no Linazuke T1 Cap 19"},
+              { title: "Kakkou no Linazuke T1 Cap 20"},
+              { title: "Kakkou no Linazuke T1 Cap 21"},
+              { title: "Kakkou no Linazuke T1 Cap 22"},
+              { title: "Kakkou no Linazuke T1 Cap 23"},
+              { title: "Kakkou no Linazuke T1 Cap 24"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/mb74fbq9n4mdfdqeo6i7t/fghfgfg.jpg?rlkey=mzejn8x7frccbnefptgma6n9f&st=fuh5o4x0&raw=1",
+            eps: [
+              { title: "Kakkou no Linazuke T2 Cap 1"},
+              { title: "Kakkou no Linazuke T2 Cap 2"},
+              { title: "Kakkou no Linazuke T2 Cap 3"},
+              { title: "Kakkou no Linazuke T2 Cap 4"},
+              { title: "Kakkou no Linazuke T2 Cap 5"},
+              { title: "Kakkou no Linazuke T2 Cap 6"},
+              { title: "Kakkou no Linazuke T2 Cap 7"},
+              { title: "Kakkou no Linazuke T2 Cap 8"},
+              { title: "Kakkou no Linazuke T2 Cap 9"},
+              { title: "Kakkou no Linazuke T2 Cap 10"},
+              { title: "Kakkou no Linazuke T2 Cap 11"},
+              { title: "Kakkou no Linazuke T2 Cap 12"},
+            ]
+          }
+        ]
+      },
 
     };
 
@@ -3241,6 +3295,7 @@
         49: ['spy-ost'],
         50: ['blackcover-ost'],
         51: ['myhero-ost'],
+        52: ['kakkou-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
